--- a/VaporForum/client/main.html
+++ b/VaporForum/client/main.html
@@ -3,23 +3,24 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
+  <h1>Running</h1>
+  {{>add}}
+  <ul>
+    {{#each posts}}
+    {{>post}}
+    {{/each}}
+  </ul>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="post">
+  <li>
+    {{text}}
+    <a href="#" class=" delete-post">delete</a>
+  </li>
 </template>
 
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+<template name="add">
+  <form action="" class="add-post">
+    <input type="text" name="text" placeholder="Posts text...">
+  </form>
 </template>
